src/test/resources/30/expanded/valid/idx-collection/EPUB/index1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
    xml:lang="en-US" lang="en-US">
    <head>
        <meta charset="UTF-8" />
        <title>Simplest Index</title>
    </head>

    <body epub:type="index">
        <h2>Simplest index</h2>
        <section epub:type="index-group">
            <h1>Group 1</h1>
            <ul epub:type="index-entry-list">
                <li><span epub:type="index-term">term 1</span>, <a epub:type="index-locator"
                        href="content.xhtml#ch1">1</a></li>
            </ul>
        </section>
    </body>
</html>
