src/test/resources/30/expanded/invalid/idx-single-file-noindex/EPUB/index.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
    xml:lang="en-US" lang="en-US">
    <head>
        <meta charset="UTF-8" />
        <title>Simplest Index</title>
    </head>

    <body>
        <h2>Simplest index</h2>
        <section>
            <h1>Group 1</h1>
            <ul>
                <li><span>term 1</span>, <a href="content.xhtml#ch1">1</a></li>
            </ul>
        </section>
    </body>
</html>
